tests/error/table.lua

-- ok
t = {}

-- ok
t = {1, 2, 3, 'abc'}

-- ok
t = {a = 1, foo = 2; 2+3; ['#$@'] = 'bar'}

-- error
t = {1, a=3, (7*8)=2}

